[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planning-wrapper"
version = "0.1.0"
description = "Planning wrapper for ManiSkill environments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["planning_wrapper"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.yaml", "*.yml"]

